<?xml version="1.0"?>
<package format="2">
  <name>robot_description</name>
  <version>0.0.0</version>
  <description>The robot package</description>

  <maintainer email="jplaced@unizar.es">julio</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- build_depend + build_export_depend + exec_depend -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>turtlebot3_teleop</depend>
  <depend>urdf</depend>
  <depend>rviz</depend>
  <depend>xacro</depend>
  <depend>gazebo_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>move_base</depend>

  <depend>octomap_rviz_plugins</depend>

  <export>

  </export>
</package>
