<?xml version="1.0"?>
<package format="2">
  <name>orb_slam2_ros</name>
  <version>0.0.1</version>
  <description>ORB SLAM2 ros implementation.</description>

  <maintainer email="haller@unternehmertum.de">Lennart Haller</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- build_depend + build_export_depend + exec_depend -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>octomap_ros</depend>

  <build_depend>message_generation</build_depend>

  <build_export_depend>message_runtime</build_export_depend>

  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
